source/objects/Sales_Invoice__c/fields/Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Entity</label>
    <referenceTo>Intacct_Entity__c</referenceTo>
    <relationshipLabel>Sales Invoices</relationshipLabel>
    <relationshipName>Sales_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>