source/objects/Sales_Invoice__c/fields/Parent_Entity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Entity</label>
    <referenceTo>Intacct_Entity__c</referenceTo>
    <relationshipLabel>Sales Invoices (Parent Entity)</relationshipLabel>
    <relationshipName>Sales_Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>