source/objects/Sales_Invoice__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>