source/objects/Sales_Invoice__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>